[tool.poetry]
name = "tg-group-download"
version = "0.1.0"
description = ""
authors = ["codenutt <23013728+codenutt@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.34.0"
poetry-plugin-dotenv = "^0.6.22"
docopt = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
